# mmhue

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
mmhue/: __init__.py  config.py
mmhue/core/: bridge.py
mmhue/interfaces/: base.py  cli.py
mmhue/interfaces/telegram/: __main__.py  auth.py  handlers.py  interface.py
mmhue/interfaces/web/: __init__.py  __main__.py  interface.py
mmhue/interfaces/web/static/: index.html
mmhue/models/: __init__.py  command.py  light.py  room.py  scene.py
mmhue/services/: __init__.py  animation_service.py  bulk.py  dance_runner.py  dance_service.py  dance_state.py  dances.py  hub.py  light_service.py  room_service.py  scene_service.py
scripts/: dance.py  register_bridge.py
tests/: test_bulk.py  test_dances.py  test_scene_service.py  test_web.py
