[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmhue"
version = "0.1.0"
description = "Modular Hue bridge controller with pluggable interfaces"
requires-python = ">=3.12"
dependencies = [
    "aiohue>=4.7",
    "python-telegram-bot[ext]>=21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "anyio>=4.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
mmhue-telegram = "mmhue.interfaces.telegram.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
